man_MANS = imap4_authenticate.3 imap4_check.3 imap4_connect.3 imap4_disconnect.3 libmail.3 libmail_deinit.3 libmail_init.3 libmail_init_imap4_mailbox.3 libmail_init_pop3_mailbox.3 libmail_strerror.3 maildir_check.3 mbox_check.3 pop3_authenticate.3 pop3_check.3 pop3_connect.3 pop3_disconnect.3 set_imap4_auth_type.3 set_imap4_hostname.3 set_imap4_inet_family.3 set_imap4_mailbox.3 set_imap4_password.3 set_imap4_port.3 set_imap4_security_level.3 set_imap4_username.3 set_mailbox_location.3 set_maildir_location.3 set_pop3_auth_type.3 set_pop3_hostname.3 set_pop3_inet_family.3 set_pop3_password.3 set_pop3_port.3 set_pop3_security_level.3 set_pop3_username.3
EXTRA_DIST = $(man_MANS)
